fixed JPG error

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ p {
     font-size: 32px;
     font-family: 'Roboto', sans-serif;
     padding-left: 32px;
-    padding-right: 32px
+    padding-right: 32px;
     color:rgb(52, 56, 56);
 }
 
