--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h2 {
 
 h3 {
     font-size: 40px;
-    font-family: 'Rakkas', cursive;
+    font-family: 'Roboto', sans-serif;
     color:rgb(52, 56, 56);
     background-color:rgb(161, 224, 203);
     padding-left: 48px;
